# log_project

./: .gitignore  CMakeLists.txt  README.md
include/: file_log_output.h  log_output.h  logger.h  socket_log_output.h  thread_safe_queue.h
src/: file_log_output.cpp  logger.cpp  main.cpp  socket_log_output.cpp
